adding PWA to web application

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Newgin Sam portfolio created with love" />
-  <meta name="keywords" content="HTML, CSS, JavaScript, Portfolio, React, react-icons, sass, hire, freelancer,">
+  <meta name="keywords"
+    content="Newgin, Sam, Newgin Sam, MERN, HTML, CSS, JavaScript, Portfolio, React, react-icons, sass, hire, freelancer,">
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Newgin Sam">
   <meta property="og:title" content="Newgin Sam" />
